# ads1115

./: .gitignore  Cargo.toml
src/: lib.rs
src/adc/: ads1115.rs  mod.rs
src/bits/: comparator_mode.rs  comparator_polarity.rs  comparator_queue.rs  data_rate.rs  gain_amp.rs  latching_comparator.rs  mod.rs  mux.rs  operating_mode.rs  operating_status.rs
src/constants/: config.rs  mod.rs  mux.rs
src/error/: ads1115error.rs  mod.rs
src/register/: config.rs
